# business_consultant

./: .gitignore  .vercelignore  Dockerfile  README.md  api_app.py  docker-compose.yml  documentation.md  model_integration.py  pyproject.toml  requirements.txt  vercel.json  web_app.py
model/: collect_datasets.py  data_api.py  data_gov_script.py  data_usa_script.py  enhanced_triplet_generation.py  eu_data_script.py  evaluate_triplets.py  kaggle_script.py  linkedin_script.py  main.py  model.py  yahoo_finance_script.py
src/: config.py
static/: index.html
static/js/: app.js
