[build-system]
requires = [
    "setuptools>=69.0.2",
    "wheel>=0.42.0",
    "pip>=23.3.1",
    "distutils-extra>=2.39"
]
build-backend = "setuptools.build_meta"

[project]
name = "business_consultant"
version = "0.1.0"
description = "AI Business Consultant"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["src"] 